[tool.poetry]
name = "seen-unseen-books"
version = "0.1.0"
description = "Books from The Seen and The Unseen."
authors = ["Setu Shah <setu+seen-unseen-books@setu.me>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
