[tool.poetry]
name = "seen-unseen-books"
version = "0.1.0"
description = "Books from The Seen and The Unseen."
authors = ["Setu Shah <setu+seen-unseen-books@setu.me>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.2"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
streamlit = "^0.79.0"
watchdog = "^2.0.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ipython = "^7.22.0"
ipykernel = "^5.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
